<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="koB-CD-Kzu">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="Main" customModule="TestedAvatar" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="yZb-aR-ngW">
                                <rect key="frame" x="87.5" y="84" width="200" height="245"/>
                                <subviews>
                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="77U-Ye-mwl" customClass="AvatarView" customModule="TestedAvatar" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                        <color key="backgroundColor" red="0.72156862745098038" green="0.9137254901960784" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="avatar"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="Qc0-kF-nXr"/>
                                            <constraint firstAttribute="width" secondItem="77U-Ye-mwl" secondAttribute="height" multiplier="1:1" id="pKK-lA-D7M"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="color" keyPath="innerColor">
                                                <color key="value" red="0.72156862749999995" green="0.91372549020000005" blue="0.52549019610000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                                <color key="value" red="0.058823529630000003" green="0.16078431900000001" blue="0.2823529541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cbm-Ey-lem">
                                        <rect key="frame" x="0.0" y="216" width="200" height="29"/>
                                        <accessibility key="accessibilityConfiguration" identifier="nameLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
                                        <color key="textColor" red="0.058823529630000003" green="0.16078431900000001" blue="0.2823529541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="yZb-aR-ngW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1Vg-eM-5Ej"/>
                            <constraint firstItem="yZb-aR-ngW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="bzH-1t-y8H"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="6Bh-Kx-diE">
                        <barButtonItem key="leftBarButtonItem" image="Cog-small" id="5Ei-J5-rYN">
                            <color key="tintColor" red="0.4941176471" green="0.82745098039999998" blue="0.12941176469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="m8T-wN-xBL" kind="presentation" modalPresentationStyle="formSheet" id="ziK-sz-5xo"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="avatar" destination="77U-Ye-mwl" id="YE4-Kx-d1h"/>
                        <outlet property="name" destination="Cbm-Ey-lem" id="TUe-Do-Gme"/>
                        <outlet property="settings" destination="5Ei-J5-rYN" id="g64-cR-xOA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1092" y="398"/>
        </scene>
        <!--Settings-->
        <scene sceneID="out-Tw-FEE">
            <objects>
                <viewControllerPlaceholder storyboardName="Settings" id="m8T-wN-xBL" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="reU-fZ-8xW" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1563.5" y="398"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="i91-uc-eBh">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="koB-CD-Kzu" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3ky-iJ-pwK">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Dd7-Hk-nYP"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Fe9-l9-g6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="360" y="398"/>
        </scene>
    </scenes>
    <resources>
        <image name="Cog-small" width="22" height="22"/>
    </resources>
</document>
